# Cellular_Automaton

./: .gitignore  App.c  App.h  Board.c  Board.h  CMakeLists.txt  Camera.c  Camera.h  Cell.h  README.md  Text.c  Text.h  eLists.c  eLists.h  gridManipul.c  gridManipul.h  kiss_draw.c  kiss_general.c  kiss_posix.c  kiss_sdl.h  kiss_widgets.c  main.c
misc/: ex1.c  ex2.c  scheme.mdj
